syntax = "proto3";

option go_package = ".;mtast";

message ChangePB {
  repeated string sites = 1;
  repeated string nodes = 2;
  repeated string keys = 3;
  repeated OpPB ops = 4;
}

message OpPB {
  int64 site = 1;
  int64 clock = 2;
  int64 node = 3;
  int64 parent = 4;
  int64 leftSite = 5;
  int64 leftClock = 6;
  int64 key = 7;
  oneof value {
    string string = 8;
    string json = 9;
  }
}
