syntax = "proto3";

option go_package = ".;mtast";

message FullChange {
  repeated FullOp ops = 4;
}

message FullOp {
  string site = 1;
  int64 clock = 2;
  string node = 3;
  string parent = 4;
  string leftSite = 5;
  int64 leftClock = 6;
  string key = 7;
  string value = 8;
}
